2005-03-30 23:36 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormFilePrefsManager.m: Update the version of a 
	file, once it's been saved with a new version of Gorm.

2005-03-30 22:43 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormFilePrefsManager.m: Update to version 0.9.5.
	* GormInfo.plist: Update to version 0.9.5.

2005-03-30 06:09 Gregory John Casamento <greg_casamento@yahoo.com>

	* Merge: from branch: build_reorg_branch.
	
2005-03-30 06:09 Gregory John Casamento <greg_casamento@yahoo.com>

        BRANCH: build_reorg_branch
	* GNUmakefile: Added GormInfo.plist back to the top level
	dir
	* Resources/GormInfo.plist: Removed from here.

2005-03-29 21:42 Gregory John Casamento <greg_casamento@yahoo.com>

        BRANCH: build_reorg_branch
	* GNUmakefile
	* GNUmakefile.preamble
	* GormPrefs/GNUmakefile
	* GormPrefs/GNUmakefile.preamble
	* Palettes/0Menus/GNUmakefile.preamble
	* Palettes/1Windows/GNUmakefile.preamble
	* Palettes/2Controls/GNUmakefile.preamble
	* Palettes/3Containers/GNUmakefile.preamble
	* Palettes/4Data/GNUmakefile.preamble: Removed GormPrefs framework,
	it is now a library.
	* Resources: Moved all .gorm files from here..
	* English.lproj: To here.
	
2005-03-29  Richard Frith-Macdonald <rfm@gnu.org>

        BRANCH: build_reorg_branch
	* GormPalettesManager.m: Fix some coordinate translation bugs when
	the gui is decorating windows itsself.

2005-03-29 02:47 Gregory John Casamento <greg_casamento@yahoo.com>

        BRANCH: build_reorg_branch
	* GormCore/GNUmakefile.preamble: Removed link to GormPrefs.
	* GormCore/GormPrivate.m: Removed uneeded reference to GormPrefs.

2005-03-29 02:24 Gregory John Casamento <greg_casamento@yahoo.com>

        BRANCH: build_reorg_branch
	* GNUmakefile.postamble: Removed kludge for windows.
	* GormCore/GNUmakefile.preamble: Fixed path.

2005-03-29 01:50 Gregory John Casamento <greg_casamento@yahoo.com>

        BRANCH: build_reorg_branch